// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="sc-frDJqD djlZsF"
>
  No Content
</div>
`;

exports[`renders correctly with a header 1`] = `
<div
  className="sc-frDJqD djlZsF"
>
  <header
    className="sc-kvZOFW dEjMxN"
  >
    This is a header
  </header>
</div>
`;

exports[`renders correctly with a header and content 1`] = `
<div
  className="sc-frDJqD djlZsF"
>
  <header
    className="sc-kvZOFW dEjMxN"
  >
    This is a header
  </header>
  <section
    className="sc-hqyNC kHHYhF"
  >
    This is the panels content
  </section>
</div>
`;
